--- a/Readme
+++ b/Readme
@@ -2,6 +2,6 @@
 * TODO need to measure many agents properties  
   - [ ] TODO - Determine if graph is in a star-like phase or in a fully connected phase.
   - [ ] TODO - Determine if graph hubs are correlated.
-  - [ ] TODO - Calculate overlaps
-  - [ ] TODO Classe para calcular medias, variancias e covariancias. 
+  - [X] TODO - Calculate overlaps
+  - [X] TODO - Classe para calcular medias, variancias e covariancias. 
 * TODO Verificar se é melhor agentes i perguntar a j sobre edge(j,k) com k <- nó aleatório, ou i perguntar a j sobre edge(k,l) com (k,l) aleatorio
